# opencv-cpp-ch3

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Resources/: CMakeList.txt
